# language-learning-app

./: .env  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  routes.py
backend/tests/: test_routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ChatHeader.jsx  ChatInput.jsx  ChatInterface.jsx  ChatInterface.test.jsx  Conversation.jsx  MessageItem.jsx  MessageList.jsx  prompts.js
frontend/src/css/: ChatHeader.css  ChatInput.css  ChatInterface.css  Conversation.css  MessageItem.css  MessageList.css
